Boxes section is completed with bootstrap icons.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
       crossorigin="anonymous"
     />
 
+    <!-- Bootstrap Icons CDN -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
+    />
+
     <!-- Custom style sheet -->
     <link rel="stylesheet" href="style.css" />
 
@@ -89,6 +95,64 @@
             <!-- "news-input" is a custom css class defined in style.css to shorten the input group width -->
             <input type="text" class="form-control" placeholder="Enter Email" />
             <button class="btn btn-dark btn-lg" type="button">Button</button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Boxes -->
+    <section class="p-5">
+      <div class="container">
+        <div class="row text-center">
+          <div class="col-md">
+            <div class="card bg-dark text-light">
+              <div class="card-body text-center">
+                <div class="h1 mb-3">
+                  <!-- In bootstrap, h1 etc can be used as class to increase the size of anything -->
+                  <i class="bi bi-laptop"></i>
+                </div>
+                <h3 class="card-title mb-3">Virtual</h3>
+                <p class="card-text">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam,
+                  esse odio placeat asperiores rerum magni.
+                </p>
+                <a href="#" class="btn btn-primary">Read More</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md">
+            <div class="card bg-secondary text-light">
+              <div class="card-body text-center">
+                <div class="h1 mb-3">
+                  <!-- In bootstrap, h1 etc can be used as class to increase the size of anything -->
+                  <i class="bi bi-person-square"></i>
+                </div>
+                <h3 class="card-title mb-3">Hybrid</h3>
+                <p class="card-text">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam,
+                  esse odio placeat asperiores rerum magni.
+                </p>
+                <a href="#" class="btn btn-dark">Read More</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md">
+            <div class="card bg-dark text-light">
+              <div class="card-body text-center">
+                <div class="h1 mb-3">
+                  <!-- In bootstrap, h1 etc can be used as class to increase the size of anything -->
+                  <i class="bi bi-people"></i>
+                </div>
+                <h3 class="card-title mb-3">In Person</h3>
+                <p class="card-text">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam,
+                  esse odio placeat asperiores rerum magni.
+                </p>
+                <a href="#" class="btn btn-primary">Read More</a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
