Learning sections are created.

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <!-- Boxes -->
     <section class="p-5">
       <div class="container">
-        <div class="row text-center">
+        <div class="row text-center g-4">
           <div class="col-md">
             <div class="card bg-dark text-light">
               <div class="card-body text-center">
@@ -153,6 +153,63 @@
                 <a href="#" class="btn btn-primary">Read More</a>
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Learn Sections -->
+    <section id="learn" class="p-5">
+      <div class="container">
+        <div class="row align-items-center justify-content-between">
+          <div class="col-md">
+            <img
+              src="img/fundamentals.svg"
+              class="img-fluid"
+              alt="fundamentals"
+            />
+          </div>
+          <div class="col-md p-5">
+            <h2>Learn The Fundamentals</h2>
+            <p class="lead">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic
+              dolores minima maxime deserunt. Quasi, deleniti!
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam,
+              tenetur, amet provident quis vel blanditiis, voluptates labore nam
+              maxime error deserunt ipsa quia inventore itaque odio
+              exercitationem facere? Laborum, minus?
+            </p>
+            <a href="#" class="btn btn-light mt-3">
+              <i class="bi bi-chevron-right"></i> Read More</a
+            >
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="learn" class="p-5 bg-dark text-light">
+      <div class="container">
+        <div class="row align-items-center justify-content-between">
+          <div class="col-md p-5">
+            <h2>Learn React</h2>
+            <p class="lead">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic
+              dolores minima maxime deserunt. Quasi, deleniti!
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam,
+              tenetur, amet provident quis vel blanditiis, voluptates labore nam
+              maxime error deserunt ipsa quia inventore itaque odio
+              exercitationem facere? Laborum, minus?
+            </p>
+            <a href="#" class="btn btn-light mt-3">
+              <i class="bi bi-chevron-right"></i> Read More</a
+            >
+          </div>
+          <div class="col-md">
+            <img src="img/react.svg" class="img-fluid" alt="fundamentals" />
           </div>
         </div>
       </div>
