--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </head>
   <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3">
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
       <div class="container">
         <a href="#" class="navbar-brand">Frontend Bootcamp</a>
 
@@ -214,5 +214,158 @@
         </div>
       </div>
     </section>
+
+    <!-- Questions Accordion -->
+    <div class="section p-5" id="questions">
+      <div class="container">
+        <h2 class="text-center mb-4">Frequently Asked Questions</h2>
+        <div class="accordion accordion-flush" id="questions">
+          <!-- Item 1 -->
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#question-one"
+              >
+                Where exactly are you located?
+              </button>
+            </h2>
+            <div
+              id="question-one"
+              class="accordion-collapse collapse"
+              data-bs-parent="#questions"
+            >
+              <div class="accordion-body">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Doloremque natus qui at esse delectus rem est eos sit tenetur
+                deleniti rerum quidem, recusandae modi amet repellat? Voluptates
+                repellendus totam, cupiditate praesentium excepturi
+                reprehenderit, non earum fuga illum expedita exercitationem vel
+                veritatis, ab soluta placeat? Distinctio voluptates cum repellat
+                doloribus ratione!
+              </div>
+            </div>
+          </div>
+
+          <!-- Item-2 -->
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#question-two"
+              >
+                How much does it cost to attend?
+              </button>
+            </h2>
+            <div
+              id="question-two"
+              class="accordion-collapse collapse"
+              data-bs-parent="#questions"
+            >
+              <div class="accordion-body">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Doloremque natus qui at esse delectus rem est eos sit tenetur
+                deleniti rerum quidem, recusandae modi amet repellat? Voluptates
+                repellendus totam, cupiditate praesentium excepturi
+                reprehenderit, non earum fuga illum expedita exercitationem vel
+                veritatis, ab soluta placeat? Distinctio voluptates cum repellat
+                doloribus ratione!
+              </div>
+            </div>
+          </div>
+
+          <!-- Item-3 -->
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#question-three"
+              >
+                What do I need to know?
+              </button>
+            </h2>
+            <div
+              id="question-three"
+              class="accordion-collapse collapse"
+              data-bs-parent="#questions"
+            >
+              <div class="accordion-body">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Doloremque natus qui at esse delectus rem est eos sit tenetur
+                deleniti rerum quidem, recusandae modi amet repellat? Voluptates
+                repellendus totam, cupiditate praesentium excepturi
+                reprehenderit, non earum fuga illum expedita exercitationem vel
+                veritatis, ab soluta placeat? Distinctio voluptates cum repellat
+                doloribus ratione!
+              </div>
+            </div>
+          </div>
+
+          <!-- Item-4 -->
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#question-four"
+              >
+                What do I sign up?
+              </button>
+            </h2>
+            <div
+              id="question-four"
+              class="accordion-collapse collapse"
+              data-bs-parent="#questions"
+            >
+              <div class="accordion-body">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Doloremque natus qui at esse delectus rem est eos sit tenetur
+                deleniti rerum quidem, recusandae modi amet repellat? Voluptates
+                repellendus totam, cupiditate praesentium excepturi
+                reprehenderit, non earum fuga illum expedita exercitationem vel
+                veritatis, ab soluta placeat? Distinctio voluptates cum repellat
+                doloribus ratione!
+              </div>
+            </div>
+          </div>
+
+          <!-- Item-5 -->
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#question-five"
+              >
+                Do you help me find a job?
+              </button>
+            </h2>
+            <div
+              id="question-five"
+              class="accordion-collapse collapse"
+              data-bs-parent="#questions"
+            >
+              <div class="accordion-body">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Doloremque natus qui at esse delectus rem est eos sit tenetur
+                deleniti rerum quidem, recusandae modi amet repellat? Voluptates
+                repellendus totam, cupiditate praesentium excepturi
+                reprehenderit, non earum fuga illum expedita exercitationem vel
+                veritatis, ab soluta placeat? Distinctio voluptates cum repellat
+                doloribus ratione!
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
