Contact and Maps section is created using Mapbox.

--- a/index.html
+++ b/index.html
@@ -19,15 +19,14 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
     />
 
+    <!-- Mapbox CSS CDN -->
+    <link
+      href="https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.css"
+      rel="stylesheet"
+    />
+
     <!-- Custom style sheet -->
     <link rel="stylesheet" href="style.css" />
-
-    <!-- JS bundle for bootstrap -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
 
     <title>Frontend Bootcamp</title>
   </head>
@@ -467,5 +466,68 @@
         </div>
       </div>
     </section>
+
+    <!-- Contact and Map -->
+    <section class="p-5">
+      <div class="container">
+        <div class="row g-4">
+          <div class="col-md">
+            <h2 class="text-center mb-4">Contact Info</h2>
+            <ul class="list-group list-group-flush lead">
+              <li class="list-group-item">
+                <span class="fw-bold">Main Location:</span> 52, Keerthi Nagara,
+                Shivamogga
+              </li>
+              <li class="list-group-item">
+                <span class="fw-bold">Enrollment Phone:</span> +91-990-223-9898
+              </li>
+              <li class="list-group-item">
+                <span class="fw-bold">Student Phone:</span> +91-974-223-9898
+              </li>
+              <li class="list-group-item">
+                <span class="fw-bold">Enrollment Email:</span>
+                enrollment@raaghavendrahm.com
+              </li>
+              <li class="list-group-item">
+                <span class="fw-bold">Student Email:</span>
+                student@raaghavendrahm.com
+              </li>
+            </ul>
+          </div>
+
+          <!-- Maps -->
+          <div class="col-md">
+            <div id="map"></div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- JS bundle for bootstrap -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+
+    <!-- JS CDN for Mapbox -->
+    <script src="https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.js"></script>
+
+    <!-- JS for Maps -->
+
+    <script>
+      mapboxgl.accessToken =
+        'pk.eyJ1IjoicmFhZ2hhdmVuZHJhaG0iLCJhIjoiY2t5bzZ2bm50M3g2dzJ2cGJ1a29jYTQ2MyJ9.cD0_UIquOyiX7hGsz8fB-w';
+      // The above is my account token (public). Other token can be created.
+      var map = new mapboxgl.Map({
+        container: 'map',
+        style: 'mapbox://styles/mapbox/streets-v11',
+
+        // Additional styles added by us:
+        // center: [13.9501, 75.5673], // co-ordinates for keerthi nagara, shivamogga
+        center: [-71.060982, 42.35725],
+        zoom: 18,
+      });
+    </script>
   </body>
 </html>
