Footer is created with go to top button.

--- a/index.html
+++ b/index.html
@@ -503,6 +503,18 @@
       </div>
     </section>
 
+    <!-- Footer -->
+    <footer class="p-5 bg-dark text-white text-center position-relative">
+      <div class="container">
+        <p class="lead">Copyright &copy; 2022 Frontend Bootcamp</p>
+
+        <!-- Now go to top button is created that is place absolute relative to the footer -->
+        <a href="#" class="position-absolute bottom-0 end-0 p-5"
+          ><i class="bi bi-arrow-up-circle h1"></i
+        ></a>
+      </div>
+    </footer>
+
     <!-- JS bundle for bootstrap -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
